[package]
name = "todo_list"
version = "1.0.0"
edition = "2021"                                               # <- Use 2021 (2024 edition isn't officially released yet)
authors = ["Samyam Timsina <timsinasamyam3@gmail.com>"]
description = "A simple command-line todo app written in Rust"
license = "MIT"
repository = "https://github.com/DvanXanMalai/todo_list"
homepage = "https://github.com/DvanXanMalai/todo_list"
documentation = "https://docs.rs/todo_list"
readme = "README.md"
keywords = ["todo", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
directories = "6.0"
